--- a/Site-Dashboard/package.json
+++ b/Site-Dashboard/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon --exec node app.js"
+    "build": "echo 'No build step required'"
   },
   "author": "Feito pelos desenvolvedores @ São Paulo Tech School / Bandtec Digital School",
   "license": "MIT",
