--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,10 +3,10 @@ name: CI-CD Pipeline
 on:
   push:
     branches:
-      - Teste-deploy
+      - main
   pull_request:
     branches:
-      - Teste-deploy
+      - main
 
 jobs:
   prepare:
@@ -84,6 +84,8 @@ jobs:
     needs: dockerize
     steps:
      - name: deploy to EC2 via ssh
+       uses: appleboy/ssh-action@v0.1.7
        with:
          host: ${{ secrets.EC2_HOST }}
          username: ubuntu
+
