--- a/Site-Dashboard/Dockerfile
+++ b/Site-Dashboard/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:20
 WORKDIR /usr/src/app
-RUN git clone https://github.com/Vmoralles/MorallesTech.git .
+RUN git clone --branch Teste https://github.com/Vmoralles/MorallesTech.git .
 WORKDIR /usr/src/app/MorallesTech/Site-Dashboard
 RUN ls -la  
 RUN npm install
