--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,10 +3,10 @@ name: CI-CD Pipeline
 on:
   push:
     branches:
-      - Teste
+      - main
   pull_request:
     branches:
-      - Teste
+      - main
 
 jobs:
   prepare:
