--- a/Site-Dashboard/Dockerfile
+++ b/Site-Dashboard/Dockerfile
@@ -4,7 +4,7 @@ FROM node:20
 WORKDIR /usr/src/app
 
 # Clonando a branch Teste do repositório
-RUN git clone --branch Teste https://github.com/Vmoralles/MorallesTech.git .
+RUN git clone --depth 1 https://github.com/Vmoralles/MorallesTech.git .
 
 # Mudando para o diretório do Site-Dashboard
 WORKDIR /usr/src/app/MorallesTech/Site-Dashboard
