--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -74,7 +74,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: Build Docker image
         run: |
-          cd MorallesTech/Site-Dashboard
+          cd Site-Dashboard
           docker build -t  ${{ secrets.DOCKER_USERNAME }}/nodeimage:v2 .
       - name: Push to Docker HUb
         run: docker push ${{ secrets.DOCKER_USERNAME }}/nodeimage:v2    
