--- a/Site-Dashboard/Dockerfile
+++ b/Site-Dashboard/Dockerfile
@@ -12,9 +12,13 @@ WORKDIR /usr/src/app/MorallesTech/Site-Dashboard
 # Verificando a estrutura de arquivos
 RUN ls -la
 
+# Verificando se o package.json está presente e movendo se necessário
+RUN [ -f package.json ] || echo "Arquivo package.json não encontrado" && exit 1
+
 # Instalando dependências
 RUN npm install
 
 EXPOSE 8080
 
 CMD ["npm", "start"]
+
