--- a/Site-Dashboard/Dockerfile
+++ b/Site-Dashboard/Dockerfile
@@ -4,16 +4,16 @@ FROM node:20
 WORKDIR /usr/src/app
 
 # Clonando a branch Teste do repositório
-RUN git clone --depth 1 https://github.com/Vmoralles/MorallesTech.git .
+RUN git clone https://github.com/Vmoralles/MorallesTech.git .
 
 # Mudando para o diretório do Site-Dashboard
 WORKDIR /usr/src/app/MorallesTech/Site-Dashboard
 
 # Verificando a estrutura de arquivos
-RUN ls -la
+RUN ls -la /usr/src/app/MorallesTech/Site-Dashboard
 
-# Verificando se o package.json está presente e movendo se necessário
-RUN [ -f package.json ] || echo "Arquivo package.json não encontrado" && exit 1
+# Verificando se o package.json está presente
+RUN [ -f /usr/src/app/MorallesTech/Site-Dashboard/package.json ] || (echo "Arquivo package.json não encontrado" && exit 1)
 
 # Instalando dependências
 RUN npm install
