--- a/Site-Dashboard/Dockerfile
+++ b/Site-Dashboard/Dockerfile
@@ -5,20 +5,16 @@ FROM node:20
 WORKDIR /usr/src/app
 
 # Copie os arquivos de configuração do Node.js
-COPY Site-Dashboard/package*.json ./
+COPY package*.json ./
 
 # Instale as dependências
 RUN npm install
 
 # Copie o restante do código da aplicação
-COPY Site-Dashboard/ ./
+COPY . .  
 
 # Exponha a porta da aplicação
 EXPOSE 8080
 
 # Comando para iniciar a aplicação
 CMD ["npm", "start"]
-
-
-CMD ["npm", "start"]
-
